apps/routers/vpn-frontend/vpn-admin-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vpn-admin
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`vpn-admin.hephy.pro`)
    services:
    - kind: Service
      name: vpn-admin-public-challenge
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vpn-admin
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`vpn-admin.hephy.pro`)
    services:
    - name: vpn-admin-public-challenge
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
